<resources>
    <string name="app_name">CarPartsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Customer Full Name</string>
    <string name="nav_header_subtitle">Customer Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Log In</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_category">Category</string>
    <string name="menu_myCart">My Cart</string>
    <string name="menu_myOrder">My Order</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_feedback">Write a feedback</string>
    <string name="menu_logOut">Log Out</string>
    <string-array name="spinnerBankTypes">
        <item>Alliance Bank</item>
        <item>Hong Leong Bank</item>
        <item>HSBC Bank</item>
        <item>May Bank</item>
        <item>Public Bank</item>
    </string-array>
    <string-array name="spinnerWarranty">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
    </string-array>

    <string name="rateDialog">If you enjoyed our delivery service, please do rate our services if you would like to</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_to">Login in to your account</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="forgotPass">Forgot Password ?</string>
    <string name="account">Create an account</string>
    <string name="name">Full Name</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Home Address</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="dialogPassword">We will send you a password reset link to your email address you have registered with us</string>
    <string name="feedback">Customer Feedback</string>
    <string name="service">Are you satisfied with the service?</string>
    <string name="improve">Tell us what can be improved?</string>
    <string name="submit">Submit</string>
    <string name="editName">Name</string>
    <string name="currentPasswd">Current Password</string>
    <string name="newpasswd">New Password</string>
    <string name="returnProductID">Return ProductID</string>
    <string name="returnProductName">Return Product Name</string>
    <string name="returnProductImage">Return Product Image</string>
    <string name="deliveryStatus">Delivery Status</string>
    <string name="adminViewFeedback">Admin View Customer Feedback</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saveProfilePicture">Save Profile Picture</string>
    <string name="saveProfile">Save Profile</string>
    <string name="OrderDate">Ordered Date</string>
    <string name="amountPayed">Total Amount</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="dateOfOrderPlaced">Date Of Order Placed</string>
    <string name="comments">Comments:</string>
    <string name="updateDeliveryStatus">Update Delivery Status</string>

    <string name="deliveredItems">Delivered Items</string>
    <string name="hi">Hi</string>

    <string name="yoo">Yo</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello">My name is Ruth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_customer_home">CustomerHome</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="title_activity_admin_main_new">AdminMainActivityNew</string>
    <string name="title_activity_admin_main_latest">AdminMainActivityLatest</string>
    <string name="title_activity_delivery_tracker_maps">DeliveryTrackerMapsActivity</string>
    <string name="admin_delivery_management">Admin Delivery Management</string>
    <string name="update_delivery_status">Update Delivery Status</string>
    <string name="title_activity_admin_create_update_delivery_tracker_location">
        AdminCreateUpdateDeliveryTrackerLocation
    </string>
</resources>