<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_customer"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile_customer"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_myCart_customer"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/menu_myCart" />
        <item
            android:title="My Order" >
            <menu>
                <item
                    android:id="@+id/nav_my_order_cash_on_delivery_customer"
                    android:icon="@drawable/ic_baseline_wallet_24"
                    android:title="By Cash On Delivery" />
                <item
                    android:id="@+id/nav_my_order_credit_card_customer"
                    android:icon="@drawable/ic_baseline_credit_card_24"
                    android:title="By Credit Card" />
            </menu>
        </item>
        <item
            android:title="Delivery" >
            <menu>
                <item
                    android:id="@+id/nav_itemDelivered_items"
                    android:icon="@drawable/ic_baseline_delivery_dining_24"
                    android:title="Delivered Items" />
            </menu>
        </item>
        <item
            android:title="Return Product" >
            <menu>
                <item
                    android:id="@+id/nav_itemOrdered_customer"
                    android:icon="@drawable/ic_baseline_keyboard_return_24"
                    android:title="Item Ordered" />
                <item
                    android:id="@+id/nav_status_customer"
                    android:icon="@drawable/ic_baseline_signal_wifi_statusbar_null_24"
                    android:title="Status" />
            </menu>
        </item>
        <item
            android:title="Others" >
            <menu>
                <item
                   android:id="@+id/nav_feedback_customer"
                    android:icon="@drawable/ic_baseline_feedback_24"
                    android:title="@string/menu_feedback" />
                <item
                   android:id="@+id/nav_aboutUs_customer"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/menu_aboutUs" />
            </menu>
        </item>
    </group>
</menu>