<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home_customer">
    <fragment
        android:id="@+id/nav_profile_customer"
        android:name="tarc.edu.carpartsapp.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_myCart_customer"
        android:name="tarc.edu.carpartsapp.Customer.MyCartFragment"
        android:label="@string/menu_myCart"
        tools:layout="@layout/fragment_my_cart" >
        <action
            android:id="@+id/action_nav_myCart_customer_to_nav_placedOrder_customer"
            app:destination="@id/nav_placedOrder_customer" />
        <action
            android:id="@+id/action_nav_myCart_customer_to_nav_creditCard_customer"
            app:destination="@id/nav_creditCard_customer" />
    </fragment>
    <fragment
        android:id="@+id/nav_aboutUs_customer"
        android:name="tarc.edu.carpartsapp.AboutUsFragment"
        android:label="@string/menu_aboutUs"
        tools:layout="@layout/fragment_about_us" />
    <activity
        android:id="@+id/nav_logOut_customer"
        android:name="tarc.edu.carpartsapp.MainActivity"
        android:label="@string/menu_logOut"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/nav_home_customer"
        android:name="tarc.edu.carpartsapp.Customer.HomeCustomerFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home_customer" >
        <action
            android:id="@+id/action_nav_home_customer_to_nav_view_all_popular_customer"
            app:destination="@id/nav_view_all_popular_customer" />
        <action
            android:id="@+id/action_nav_home_customer_to_nav_view_all_recommended_customer"
            app:destination="@id/nav_view_all_recommended_customer" />
        <action
            android:id="@+id/action_nav_home_customer_to_nav_view_all_category_customer"
            app:destination="@id/nav_view_all_category_customer" />
    </fragment>
    <fragment
        android:id="@+id/nav_myOrder_customer"
        android:name="tarc.edu.carpartsapp.Customer.MyOrderFragment"
        android:label="@string/menu_myOrder"
        tools:layout="@layout/fragment_my_order" />
    <fragment
        android:id="@+id/nav_view_all_popular_customer"
        android:name="tarc.edu.carpartsapp.Customer.ViewAllPopularFragment"
        android:label="View All Popular Car Parts"
        tools:layout="@layout/fragment_view_all_popular" >
        <action
            android:id="@+id/action_nav_view_all_popular_customer_to_nav_home_customer"
            app:destination="@id/nav_home_customer" />
        <action
            android:id="@+id/action_nav_view_all_popular_customer_to_nav_details_customer"
            app:destination="@id/nav_details_customer" />
    </fragment>
    <fragment
        android:id="@+id/nav_view_all_recommended_customer"
        android:name="tarc.edu.carpartsapp.Customer.ViewAllRecommendedFragment"
        android:label="View All Recommended Car Parts "
        tools:layout="@layout/fragment_view_all_recommended" >
        <action
            android:id="@+id/action_nav_view_all_recommended_customer_to_nav_home_customer"
            app:destination="@id/nav_home_customer" />
        <action
            android:id="@+id/action_nav_view_all_recommended_customer_to_nav_details_customer"
            app:destination="@id/nav_details_customer" />
    </fragment>
    <fragment
        android:id="@+id/nav_details_customer"
        android:name="tarc.edu.carpartsapp.Customer.DetailsFragment"
        android:label="Car Parts Details"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_nav_details_customer_to_nav_view_all_category_customer"
            app:destination="@id/nav_view_all_category_customer" />
        <action
            android:id="@+id/action_nav_details_customer_to_nav_view_all_popular_customer"
            app:destination="@id/nav_view_all_popular_customer" />
        <action
            android:id="@+id/action_nav_details_customer_to_nav_view_all_recommended_customer"
            app:destination="@id/nav_view_all_recommended_customer" />
    </fragment>
    <fragment
        android:id="@+id/nav_view_all_category_customer"
        android:name="tarc.edu.carpartsapp.Customer.ViewAllCategoryFragment"
        android:label="View All Car Parts Category"
        tools:layout="@layout/fragment_view_all_category" >
        <action
            android:id="@+id/action_nav_view_all_category_customer_to_nav_home_customer"
            app:destination="@id/nav_home_customer" />
        <action
            android:id="@+id/action_nav_view_all_category_customer_to_nav_details_customer"
            app:destination="@id/nav_details_customer" />
    </fragment>
    <fragment
        android:id="@+id/nav_placedOrder_customer"
        android:name="tarc.edu.carpartsapp.Customer.PlacedOrderFragment"
        android:label="Placed Order"
        tools:layout="@layout/fragment_placed_order">
        <action
            android:id="@+id/action_nav_placedOrder_customer_to_nav_myCart_customer"
            app:destination="@id/nav_myCart_customer" />
        <action
            android:id="@+id/action_nav_placedOrder_customer_to_nav_creditCard_customer"
            app:destination="@id/nav_creditCard_customer" />
    </fragment>
    <fragment
        android:id="@+id/nav_creditCard_customer"
        android:name="tarc.edu.carpartsapp.Customer.CreditCardFragment"
        android:label="Credit Card Details"
        tools:layout="@layout/fragment_credit_card">
        <action
            android:id="@+id/action_nav_creditCard_customer_to_nav_myCart_customer"
            app:destination="@id/nav_myCart_customer" />
        <action
            android:id="@+id/action_nav_creditCard_customer_to_nav_placedOrder_customer"
            app:destination="@id/nav_placedOrder_customer" />
    </fragment>
</navigation>