<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProfileFragment"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="#FDC12A"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_baseline_person_24" />

                <TextView
                    android:id="@+id/textViewLabelBigName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/imageView6"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:enabled="false"
                        android:hint="@string/name"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="10dp"
                        android:enabled="false"
                        android:hint="@string/email"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputHomeAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_home_24"
                        android:drawablePadding="10dp"
                        android:enabled="false"
                        android:hint="@string/address"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phoneNumber">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_local_phone_24"
                        android:drawablePadding="10dp"
                        android:enabled="false"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputDateOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_date_24"
                        android:drawablePadding="10dp"
                        android:enabled="false"
                        android:hint="@string/dateOfBirth"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_person_24"
                        android:drawablePadding="10dp"
                        android:enabled="false"
                        android:hint="@string/gender"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FDC12A"
            android:text="@string/edit_profile"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnChangeProfilePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FDC12A"
            android:text="Change Profile Picture"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/resetPasswordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FDC12A"
            android:text="Change Password"
            android:textColor="@color/black" />


    </LinearLayout>

</ScrollView>